cnj-hello-backend-micro/src/main/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cnj-hello-backend-micro
  labels:
    helm.sh/chart: cnj-hello-backend-micro-4.0.0
    app.kubernetes.io/name: cnj-hello-backend-micro
    app.kubernetes.io/instance: cnj-hello-backend-micro
    app.kubernetes.io/version: "6.0.0"
    app.kubernetes.io/managed-by: Helm
spec:
  ingressClassName: traefik
  rules:
    - host: "apps.cloudtrain.aws.msgoat.eu"
      http:
        paths:
          - path: /cloudtrain-int/cnj-hello-backend-micro
            pathType: Prefix
            backend:
              service:
                name: cnj-hello-backend-micro
                port:
                  name: http
